electron and muon reconstruction

--- a/biblio.bib
+++ b/biblio.bib
@@ -880,3 +880,51 @@ URL= {https://indico.cern.ch/event/753431/contributions/3120677/attachments/1708
       note          = "All figures including auxiliary figures are available at
                        https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PUBNOTES/ATL-SOFT-PUB-2007-003",
 }
+@article{ElectronReco,
+	doi = {10.1140/epjc/s10052-019-7140-6},
+	url = {https://doi.org/10.1140%2Fepjc%2Fs10052-019-7140-6},
+	year = 2019,
+	month = {aug},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {79},
+	number = {8},
+      title = {{Electron reconstruction and identification in the {ATLAS} experiment using the 2015 and 2016 {LHC} proton-proton collision data at $\sqrt{s}=13\text{ }\text{ }\mathrm{TeV}$}},
+	journal = {The European Physical Journal C},
+      author = {{ATLAS Collaboration}}
+}
+@article{MuonReco,
+	doi = {10.1140/epjc/s10052-016-4120-y},
+	url = {https://doi.org/10.1140%2Fepjc%2Fs10052-016-4120-y},
+	year = 2016,
+	month = {may},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {76},
+	number = {5},
+      author = {{ATLAS Collaboration}},
+      journal = {The European Physical Journal C},
+      title = {{Muon reconstruction performance of the {ATLAS} detector in proton-proton collision data $\sqrt{s}=13\text{ }\text{ }\mathrm{TeV}$ }}
+}
+@techreport{MuonFig,
+      author        = "Rettie, Sebastien",
+      collaboration = "ATLAS",
+      title         = "{Muon identification and performance in the ATLAS
+                       experiment}",
+      institution   = "CERN",
+      reportNumber  = "ATL-PHYS-PROC-2018-052",
+      address       = "Geneva",
+      year          = "2018",
+      url           = "https://cds.cern.ch/record/2626330",
+      doi           = "10.22323/1.316.0097",
+}
+@article{MuonEffLargeEta,
+	doi = {10.1140/epjc/s10052-014-3130-x},
+	url = {https://doi.org/10.1140%2Fepjc%2Fs10052-014-3130-x},
+	year = 2014,
+	month = {nov},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {74},
+	number = {11},
+	author = {{ATLAS Collaboration}},
+	title = {{Measurement of the muon reconstruction performance of the {ATLAS} detector using 2011 and 2012 {LHC} proton{\textendash}proton collision data}},
+	journal = {The European Physical Journal C}
+}
