--- a/sections/ListOfAbb.tex
+++ b/sections/ListOfAbb.tex
@@ -39,6 +39,7 @@
 \item{RF: Radio frequency}
 \item{RH: RightHanded}
 \item{SCT: Semiconductor Tracker} 
+\item{SF: Scale factors}
 \item{SF-OC: Same-flavor, Opposite-charged} 
 \item{SM: Standard Model}
 \item{SR: Signal Region}
