--- a/biblio.bib
+++ b/biblio.bib
@@ -928,3 +928,64 @@ URL= {https://indico.cern.ch/event/753431/contributions/3120677/attachments/1708
 	title = {{Measurement of the muon reconstruction performance of the {ATLAS} detector using 2011 and 2012 {LHC} proton{\textendash}proton collision data}},
 	journal = {The European Physical Journal C}
 }
+@article{AntiKtAlgo,
+doi = {10.1088/1126-6708/2008/04/063},
+url = {https://dx.doi.org/10.1088/1126-6708/2008/04/063},
+year = {2008},
+month = {apr},
+publisher = {},
+volume = {2008},
+number = {04},
+pages = {063},
+author = {{Matteo Cacciari and  Gavin P. Salam and  Gregory Soyez}},
+title = {{The anti-kt jet clustering algorithm}},
+journal = {Journal of High Energy Physics}
+}
+@article{ParticleFlow,
+	doi = {10.1140/epjc/s10052-017-5031-2},
+	url = {https://doi.org/10.1140%2Fepjc%2Fs10052-017-5031-2},
+	year = 2017,
+	month = {jul},
+	publisher = {Springer Science and Business Media {LLC}},
+  	volume = {77},
+	number = {7},
+	author = {{ATLAS Collaboration}},
+	title = {{ Jet reconstruction and performance using particle flow with the {ATLAS} Detector }},
+	journal = {The European Physical Journal C}
+}
+@article{JetCalib,
+	author = {{ATLAS Collaboration}},
+	title         = "{Jet energy scale and resolution measured in
+                       proton–proton collisions at $\sqrt{s}=13$ TeV with the
+                       ATLAS detector}",
+      archivePrefix = "arXiv",
+      eprint        = "2007.02645",
+      reportNumber  = "CERN-EP-2020-083",
+      journal       = "Eur. Phys. J. C",
+      volume        = "81",
+      number        = "8",
+      pages         = "689",
+      year          = "2021",
+      url           = "https://cds.cern.ch/record/2722869",
+	  doi           = "10.1140/epjc/s10052-021-09402-3"
+}
+@techreport{JVT,
+      title         = "{Tagging and suppression of pileup jets with the ATLAS
+                       detector}",
+		author = {{ATLAS Collaboration}},
+      institution   = "CERN",
+      reportNumber  = "ATLAS-CONF-2014-018",
+      address       = "Geneva",
+      year          = "2014",
+      url           = "https://cds.cern.ch/record/1700870",
+}
+@techreport{fJVT,
+title         = "{Forward jet vertex tagging using the particle flow
+algorithm}",
+author = {{ATLAS Collaboration}},
+institution   = "CERN",
+reportNumber  = "ATL-PHYS-PUB-2019-026",
+address       = "Geneva",
+year          = "2019",
+url           = "https://cds.cern.ch/record/2683100",
+}
