--- a/sections/ListOfAbb.tex
+++ b/sections/ListOfAbb.tex
@@ -8,6 +8,7 @@
 \item{ECAL: Electromagnetic Calorimeter} 
 \item{EFT: Effective Field Theory}
 \item{EWK: Electroweak}
+\item{fJVT: forward Jet Vertex Tagger} 
 \item{FSR: Final State Radiation}
 \item{GRL: Good Run List}
 \item{H: Weak Hypercharge}
@@ -19,6 +20,7 @@
 \item{ID: Inner Detector} 
 \item{IP: Interaction Point}
 \item{IFF:Isolation and Fake Forum}
+\item{JVT: Jet Vertex Tagger} 
 \item{$\mathcal{L_{SM}}$: Lagrangian}
 \item{LAr: Liquid Argon} 
 \item{LB: Luminosity Block}
