first draft of detector chapter

--- a/biblio.bib
+++ b/biblio.bib
@@ -989,3 +989,32 @@ address       = "Geneva",
 year          = "2019",
 url           = "https://cds.cern.ch/record/2683100",
 }
+@book{HLLHC,
+      author = "{ATLAS Collaboration}",
+      title         = "{High-Luminosity Large Hadron Collider (HL-LHC): Technical design report}",
+      publisher     = "CERN",
+      address       = "Geneva",
+      series        = "CERN Yellow Reports: Monographs",
+      year          = "2020",
+      url           = "https://cds.cern.ch/record/2749422",
+      doi           = "10.23731/CYRM-2020-0010",
+}
+@article{ITkStripsTDR,
+    collaboration = "ATLAS",
+    title = "{Technical Design Report for the ATLAS Inner Tracker Strip Detector}",
+    reportNumber = "CERN-LHCC-2017-005,ATLAS-TDR-025",
+    month = "4",
+    year = "2017",
+	url  = "https://cds.cern.ch/record/2257755"
+}
+@techreport{ITkPixelTDR,
+      collaboration = "ATLAS",
+      title         = "{Technical Design Report for the ATLAS Inner Tracker Pixel
+                       Detector}",
+      institution   = "CERN",
+      reportNumber  = "CERN-LHCC-2017-021, ATLAS-TDR-030",
+      address       = "Geneva",
+      year          = "2017",
+      url           = "https://cds.cern.ch/record/2285585",
+      doi           = "10.17181/CERN.FOZZ.ZP3Q",
+}
