--- a/thesis.tex
+++ b/thesis.tex
@@ -52,7 +52,8 @@
 \renewcommand{\cftsubsecpagefont}{\normalsize}
 
 %Title of Thesis
-\title{First differential cross-sections measurement for $ZZ$ production in association with two jets in the four-leptons final state in ATLAS.}
+%\title{First differential cross-sections measurement for $ZZ$ production in association with two jets in the four-leptons final state in ATLAS.}
+\title{Standard Model Electroweak Precision Measurements with two Z bosons and two jets in ATLAS.}
 \author{Prajita Bhattarai}
 \graduationmonth{May}
 \graduationyear{2023}
