--- a/sections/ListOfAbb.tex
+++ b/sections/ListOfAbb.tex
@@ -14,6 +14,8 @@
 \item{H: Weak Hypercharge}
 \item{HCAL: Hadronic Calorimeter}
 \item{HF: Heavy Flavor}
+\item{HGTD: High Granularity Timing Detector} 
+\item{HL-LHC: High Luminosity Large Hadron Collider}  
 \item{HLT: High-level Trigger} 
 \item{I: Weak Isospin}
 \item{IBL: Insertable B-Layer} 
