--- a/thesis.tex
+++ b/thesis.tex
@@ -53,7 +53,7 @@
 
 %Title of Thesis
 %\title{First differential cross-sections measurement for $ZZ$ production in association with two jets in the four-leptons final state in ATLAS.}
-\title{Standard Model Electroweak Precision Measurements with two Z bosons and two jets in ATLAS.}
+\title{Standard Model Precision Measurements with two Z bosons and two jets in ATLAS.}
 \author{Prajita Bhattarai}
 \graduationmonth{May}
 \graduationyear{2023}
@@ -77,9 +77,11 @@ Dr. Alessandro Tricoli, Brookhaven National Laboratory
 \makecopyright
 \clearpage
 % Acknowledgements
-\phantomsection
 \addcontentsline{toc}{section}{Acknowledgements}
-\include{sections/acknowledgements}
+\begin{center}
+\textbf{\large{Acknowledgements}}
+\end{center}
+I am sincerely grateful to many people who have had a signifcant impact on my  journey. 
 \clearpage
 
 
@@ -87,6 +89,7 @@ Dr. Alessandro Tricoli, Brookhaven National Laboratory
 \phantomsection
 \begin{dissertation-abstract}
 \addcontentsline{toc}{section}{Abstract}
+This thesis presents the cross-section measurements of two Z bosons production in association with two jets in $ZZ^*jj\rightarrow 4 \ell jj$ final state, differentially as a function of several kinematic observables, which are sensitive to the vector boson scattering. The electroweak $ZZjj$ production includes the rare triple and quartic self-couplings of gauge bosons, whose scattering amplitude is regularized by the Standard Model $H\rightarrow ZZ^{*}$ processes. Measuring differential cross-sections of the $ZZjj$ process in electroweak-enhanced phase space is imperative to probe the high-energy behavior of the vector boson scattering, where modifications are expected from several Beyond the Standard Model theories. The analysis is performed using the proton-proton collision data collected by the ATLAS experiment during LHC Run-2 at $\sqrt{s}=13$ TeV center-of-mass collision energy, corresponding to the integrated luminosity of $139~fb^{-1}$. The measured differential cross-sections are corrected for the detector effects and compared with the state-of-the-art Standard Model theoretical predictions. The differential cross-sections are also used to constrain the anomalous quartic gauge couplings using a dimension-8 Effective Field Theory formalism. 
 
 \end{dissertation-abstract}
 \clearpage
